--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([Coquelicot], [3.0.2],
+AC_INIT([Coquelicot], [3.0.3],
         [Guillaume Melquiond <guillaume.melquiond@inria.fr>],
         [coquelicot])
 
@@ -43,7 +43,7 @@ AS_IF(
 rm -f conftest.v conftest.vo conftest.err
 
 if test "$libdir" = '${exec_prefix}/lib'; then
-  libdir="`$COQC -where`/user-contrib/Coquelicot"
+  libdir="`$COQC -where | tr -d '\r' | tr '\\\\' '/'`/user-contrib/Coquelicot"
 fi
 
 AC_MSG_NOTICE([building remake...])
