Fix coqdoc links.

--- a/Remakefile.in
+++ b/Remakefile.in
@@ -51,8 +51,8 @@ html/index.html: $(OBJS)
 	rm -rf html
 	mkdir -p html
 	@COQDOC@ -toc -interpolate -utf8 -html -g -R theories Coquelicot -d html \
-	  --coqlib http://coq.inria.fr/distrib/current/stdlib/ \
-	  --external http://ssr2.msr-inria.inria.fr/doc/ssreflect-1.4/ Ssreflect \
+	  --coqlib http://coq.inria.fr/distrib/current/stdlib \
+	  --external https://math-comp.github.io/htmldoc mathcomp \
 	  $(addprefix theories/,$(FILES))
 
 doc: html/index.html deps.dot
