Do not ship the opam file.

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 /.gitlab-ci.yml export-ignore
 /.mailmap export-ignore
 
+/opam export-ignore
 /misc/ export-ignore
 
 /examples/Wasow.v export-ignore
