--- a/configure.in
+++ b/configure.in
@@ -33,6 +33,8 @@ AC_MSG_CHECKING([for coqdoc])
 if test ! "$COQDOC"; then COQDOC=`which ${COQBIN}coqdoc`; fi
 AC_MSG_RESULT([$COQDOC])
 
+AC_ARG_VAR(COQEXTRAFLAGS, [extra flags passed to Coq compiler [empty]])
+
 AC_MSG_CHECKING([for SSReflect])
 AS_IF(
   [ echo "Require Import mathcomp.ssreflect.ssreflect." > conftest.v
