--- a/misc/Dockerfile
+++ b/misc/Dockerfile
@@ -1,6 +1,6 @@
 # If you modify this file, make sure to update the BUILD_IMAGE variable in .gitlab-ci.yml.
 
-FROM debian:buster
+FROM debian:buster-slim
 
 USER root
 
@@ -11,7 +11,7 @@ RUN apt-get update -yq && \
     apt-get install -yq --no-install-recommends autoconf build-essential ca-certificates git graphviz g++ ocaml-nox unzip wget && \
     apt-get clean
 
-RUN wget --quiet https://github.com/ocaml/opam/releases/download/2.0.6/opam-2.0.6-x86_64-linux -O /usr/local/bin/opam && \
+RUN wget --quiet https://github.com/ocaml/opam/releases/download/2.0.7/opam-2.0.7-x86_64-linux -O /usr/local/bin/opam && \
     chmod a+x /usr/local/bin/opam
 
 # create user
@@ -26,8 +26,8 @@ RUN opam init -y --no-setup -j1 --bare --disable-sandboxing && \
     opam switch create minimal ocaml-system && opam install -y $OPAM_PACKAGES && \
     opam switch create latest  ocaml-system && opam install -y $OPAM_PACKAGES && \
     opam install -y --switch=minimal coq.8.8.2 && \
-    opam install -y --switch=latest  coq.8.11.0 && \
+    opam install -y --switch=latest  coq.8.12.1 && \
     opam repository add coq-released https://coq.inria.fr/opam/released --all-switches && \
     opam install -y --switch=minimal coq-mathcomp-ssreflect.1.7.0 && \
-    opam install -y --switch=latest  coq-mathcomp-ssreflect.1.10.0 && \
+    opam install -y --switch=latest  coq-mathcomp-ssreflect.1.12.0 && \
     opam clean -a -c -r -s --logs
