Add support for the TIMING variable.

--- a/configure.in
+++ b/configure.in
@@ -28,6 +28,13 @@ AC_MSG_RESULT([$COQDOC])
 
 AC_ARG_VAR(COQEXTRAFLAGS, [extra flags passed to Coq compiler [empty]])
 
+AC_ARG_VAR(TIMING)
+if test -n "$TIMING"; then
+   TIMING_EXTRA="> $<.timing"
+   TIMING="-time"
+fi
+AC_SUBST(TIMING_EXTRA)
+
 AC_MSG_CHECKING([for SSReflect])
 AS_IF(
   [ echo "Require Import mathcomp.ssreflect.ssreflect." > conftest.v
