--- a/misc/Dockerfile
+++ b/misc/Dockerfile
@@ -8,7 +8,7 @@ USER root
 ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update -yq && \
     apt-get upgrade -yq --with-new-pkgs --auto-remove && \
-    apt-get install -yq --no-install-recommends autoconf build-essential ca-certificates git graphviz g++ ocaml-nox unzip wget && \
+    apt-get install -yq --no-install-recommends autoconf build-essential ca-certificates git graphviz g++ libgmp-dev ocaml-nox unzip wget && \
     apt-get clean
 
 RUN wget --quiet https://github.com/ocaml/opam/releases/download/2.0.7/opam-2.0.7-x86_64-linux -O /usr/local/bin/opam && \
@@ -22,12 +22,10 @@ WORKDIR /home/user
 
 # install opam
 ENV OPAM_PACKAGES="conf-autoconf conf-g++"
-RUN opam init -y --no-setup -j1 --bare --disable-sandboxing && \
-    opam switch create minimal ocaml-system && opam install -y $OPAM_PACKAGES && \
-    opam switch create latest  ocaml-system && opam install -y $OPAM_PACKAGES && \
-    opam install -y --switch=minimal coq.8.8.2 && \
-    opam install -y --switch=latest  coq.8.12.1 && \
+RUN opam init -y --no-setup -j4 --bare --disable-sandboxing && \
+    opam switch create minimal ocaml-system && \
+    opam switch create latest  ocaml-system && \
     opam repository add coq-released https://coq.inria.fr/opam/released --all-switches && \
-    opam install -y --switch=minimal coq-mathcomp-ssreflect.1.7.0 && \
-    opam install -y --switch=latest  coq-mathcomp-ssreflect.1.12.0 && \
+    opam install -y --switch=minimal $OPAM_PACKAGES coq.8.8.2  coq-mathcomp-ssreflect.1.7.0  && \
+    opam install -y --switch=latest  $OPAM_PACKAGES coq.8.15.1 coq-mathcomp-ssreflect.1.14.0 && \
     opam clean -a -c -r -s --logs
